--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,17 +21,17 @@ IF(NOT CMAKE_BUILD_TYPE MATCHES DEBUG)
 	set(CMAKE_BUILD_TYPE RELEASE)
 ENDIF(NOT CMAKE_BUILD_TYPE MATCHES DEBUG) 
 IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
-    message("Configuring OSRM in debug mode")
+    message(STATUS "Configuring OSRM in debug mode")
 ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG) 
 IF(CMAKE_BUILD_TYPE MATCHES RELEASE)
-    message("Configuring OSRM in release mode")
+    message(STATUS "Configuring OSRM in release mode")
 ENDIF(CMAKE_BUILD_TYPE MATCHES RELEASE) 
 
 #Configuring compilers
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 	# using Clang
 	set(CMAKE_CXX_FLAGS "-Wall -Wno-unknown-pragmas")
-	message("OpenMP parallelization not available using clang++")
+	message(WARNING "OpenMP parallelization not available using clang++")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 	# using GCC
 	set(CMAKE_CXX_FLAGS "-Wall -fopenmp") 
@@ -96,9 +96,9 @@ include_directories(${OSMPBF_INCLUDE_DIR})
 target_link_libraries (osrm-extract ${OSMPBF_LIBRARY})
 target_link_libraries (osrm-prepare ${OSMPBF_LIBRARY})
 
-find_package( GDAL )
-message("-- Activating OSRM internal tools")
 if(WITH_TOOLS)
+	message("-- Activating OSRM internal tools")
+	find_package( GDAL )
 	IF(GDAL_FOUND)
 		add_executable(osrm-components Tools/componentAnalysis.cpp)
 		target_link_libraries( osrm-components ${GDAL_LIBRARIES} )
