--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ ENDIF(CMAKE_BUILD_TYPE MATCHES RELEASE)
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 	# using Clang
 	set(CMAKE_CXX_FLAGS "-Wall -Wno-unknown-pragmas")
-	message(WARNING "OpenMP parallelization not available using clang++")
+	message(STATUS "OpenMP parallelization not available using clang++")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 	# using GCC
 	set(CMAKE_CXX_FLAGS "-Wall -fopenmp") 
@@ -101,6 +101,7 @@ if(WITH_TOOLS)
 	find_package( GDAL )
 	IF(GDAL_FOUND)
 		add_executable(osrm-components Tools/componentAnalysis.cpp)
+		include_directories(${GDAL_INCLUDE_DIR})
 		target_link_libraries( osrm-components ${GDAL_LIBRARIES} )
 		target_link_libraries( osrm-components ${Boost_LIBRARIES} )
 	ENDIF(GDAL_FOUND)
